[gd_scene load_steps=4 format=3 uid="uid://c08h887ims0t"]

[ext_resource type="Texture2D" uid="uid://dtdaf6kr66sfu" path="res://AreaTrigger.png" id="1_y55u2"]
[ext_resource type="Script" path="res://Area.gd" id="2_rq4cq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uabmd"]
size = Vector2(128, 64)

[node name="Node2D" type="Node2D"]

[node name="AreaTriggerTest" type="Node2D" parent="."]

[node name="AreaSprite" type="Sprite2D" parent="AreaTriggerTest"]
texture = ExtResource("1_y55u2")

[node name="Area2D" type="Area2D" parent="AreaTriggerTest"]
script = ExtResource("2_rq4cq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTriggerTest/Area2D"]
shape = SubResource("RectangleShape2D_uabmd")

[connection signal="body_entered" from="AreaTriggerTest/Area2D" to="AreaTriggerTest/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="AreaTriggerTest/Area2D" to="AreaTriggerTest/Area2D" method="_on_body_exited"]
